@@ -1,3 +1,3 @@
-EBUILD qmmp-9999.ebuild 2253 RMD160 4dc84cc56ee4ee4215471673b4c48679c1f98dfa SHA1 9e4fb269641e91171b81154947dd8d06b151247e SHA256 e4903b227827d4bea791564ca89302360011682429f51d851b2c87a15b51abb9
-MISC ChangeLog 983 RMD160 6c53b11826136de7f92e7b4fd19dbbdb6b52401b SHA1 32dda59df7dea18a9dcfbb441dd546e65a3a8cef SHA256 f464c990425a9e40af5111595e31b382f5c2debf6e05ab50195a52e79ca6b9c2
+EBUILD qmmp-9999.ebuild 2258 RMD160 70c412790f5d9091eda5913cb7b6c1cfb7f821f4 SHA1 b254ea06437da90c79f18e495e09b0221401261c SHA256 85275c849064cda63b3d1ef78bb8689fb552aabcb5319df0d1718fa4e16436fa
+MISC ChangeLog 1073 RMD160 224302ec8ff9ba4524e9a63bbe7847d7e804178c SHA1 04028543042c6a101032e8533914355222819122 SHA256 7597df22401492f9c94b000590d0db64e27cd3e45c6d897b850cc2083a592794
 MISC metadata.xml 467 RMD160 902dc34ff2858f3c1e0fc1a9bb4480f889a28a27 SHA1 cc040f1519138421f39d539a3ba3f616580db32d SHA256 9a7fdeabe603be14bc5517c18dfb5b52e90650ae5619addcf4adbd65a5071603
